
cmake_minimum_required(VERSION 2.8.7)
PROJECT(DATABASE)
set(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_CXX_COMPILER /usr/bin/g++)
#set(CMAKE_CXX_FLAGS " -L /usr/lib/x86_64-linux-gnu -lmysqlclient -lpthread -lz -lm -lrt -ldl ${CMAKE_CXX_FLAGS} ")
SET(EXECUTABLE_OUTPUT_PATH /home//jieli/DataBase)
INCLUDE_DIRECTORIES(/home//jieli/DataBase)
LINK_DIRECTORIES(/home/jieli/DataBase/build)
LINK_DIRECTORIES(/usr/lib/x86_64-linux-gnu)
ADD_LIBRARY(base-static STATIC test.cpp test.h)
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main base-static)
TARGET_LINK_LIBRARIES(main mysqlclient pthread z m rt dl)
